--- a/Ressources/CSS/style.css
+++ b/Ressources/CSS/style.css
@@ -1,6 +1,25 @@
 body {
   background-color: black;
+  text-align: center;
 }
 h1 {
-  color:white;
+  color: white;
+  font-family: verdana;
+  font-weight: normal;
+  font-size: 50px;
+}
+p {
+  color: gray;
+  font-family: verdana;
+  font-size: 21px;
+}
+h2 {
+  color: white;
+  font-family: verdana;
+  font-weight: 300;
+  font-size: 42px;
+}
+.link {
+  color: aquamarine;
+  font-size: 16px;
 }
